added hearder part of CSS

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <main class="container">
 
         <div id="About-Me" class="About-Me">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum reiciendis cum pariatur magnam doloribus suscipit architecto eligendi. Animi harum minima, distinctio voluptatibus perferendis deserunt magni temporibus enim vitae. Nam, vitae. 
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic id nihil esse omnis odio explicabo laudantium officiis laboriosam velit repellat consequatur repellendus enim culpa laborum dignissimos ab, harum quae temporibus?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis molestiae, adipisci vero praesentium placeat magni dolor. Nihil eaque iste nostrum quidem dolor fugiat perspiciatis ipsum! Quidem, at saepe! Aperiam, quas.
+            </p>
 
         </div>
 
