--- a/index.html
+++ b/index.html
@@ -29,26 +29,35 @@
 
     <main class="container">
 
-        <div id="About-Me" class="About-Me">
+        <section id="About-Me" class="About-Me">
             <h2>About Me</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum reiciendis cum pariatur magnam doloribus suscipit architecto eligendi. Animi harum minima, distinctio voluptatibus perferendis deserunt magni temporibus enim vitae. Nam, vitae. 
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic id nihil esse omnis odio explicabo laudantium officiis laboriosam velit repellat consequatur repellendus enim culpa laborum dignissimos ab, harum quae temporibus?
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis molestiae, adipisci vero praesentium placeat magni dolor. Nihil eaque iste nostrum quidem dolor fugiat perspiciatis ipsum! Quidem, at saepe! Aperiam, quas.
             </p>
 
-        </div>
+        </section>
 
-        <div id="work" class="Work">
+        <section id="work" class="Work">
+            <h2>Work</h2>
+            <div class="link-container">
 
-        </div>
+                <a href="" class="Surf-Report"></a>
+                <div class="four-boxes">
+                    <a href="" class="LED-WALL"></a>
+                    <a href="Calculator" class="Calculator"></a>
+                    <a href="Pastel-Puzzle" class="Pastel-Puzzle"></a>
+                    <a href="Run-Buddy" class="Run-Buddy"></a>
+                </div>
+                </a>
+            </div>
+        </section>
 
         <div id="Contact-Me" class="Contact-Me">
+            <!-- <h2>Contact Me</h2> -->
 
         </div>
         
-        <div class="Contact">
-            
-        </div>
     </main>  
 
 </body>
