--- a/index.html
+++ b/index.html
@@ -38,25 +38,28 @@
 
         </section>
 
-        <section id="work" class="Work">
+        <section id="Work" class="Work">
             <h2>Work</h2>
             <div class="link-container">
-
                 <a href="" class="Surf-Report"></a>
-                <div class="four-boxes">
-                    <a href="" class="LED-WALL"></a>
-                    <a href="Calculator" class="Calculator"></a>
-                    <a href="Pastel-Puzzle" class="Pastel-Puzzle"></a>
-                    <a href="Run-Buddy" class="Run-Buddy"></a>
-                </div>
-                </a>
+                <a href="" class="LED-WALL"></a>
+                <a href="Calculator" class="Calculator"></a>
+                <a href="Pastel-Puzzle" class="Pastel-Puzzle"></a>
+                <a href="Run-Buddy" class="Run-Buddy"></a>
             </div>
         </section>
 
-        <div id="Contact-Me" class="Contact-Me">
-            <!-- <h2>Contact Me</h2> -->
-
-        </div>
+        <section id="Contact-Me" class="Contact-Me">
+            <h2>Contact Me</h2>
+            <nav>
+                <ul>
+                    <li><a href="tel:6472377166">647.237.7166</a></li>
+                    <li><a href="mailto:hiroaki.a1989@gmail.com">hiroaki.a1989@gmail.com</a></li>
+                    <li><a href="https://github.com/Hiroro1989">GitHub</a></li>
+                    <li><a href="https://twitter.com/CyclingLover3">Twitter</a></li>
+                </ul>
+            </nav>
+        </section>
         
     </main>  
 
