--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <h2>Contact Me</h2>
             <nav>
                 <ul>
-                    <li><a href="tel:6472377166">647.237.7166</a></li>
-                    <li><a href="mailto:hiroaki.a1989@gmail.com">hiroaki.a1989@gmail.com</a></li>
-                    <li><a href="https://github.com/Hiroro1989">GitHub</a></li>
-                    <li><a href="https://twitter.com/CyclingLover3">Twitter</a></li>
+                    <li><a href="tel:6472377166" class="Phone">647.237.7166</a></li>
+                    <li><a href="mailto:hiroaki.a1989@gmail.com" class="email">hiroaki.a1989@gmail.com</a></li>
+                    <li><a href="https://github.com/Hiroro1989" class="Github">GitHub</a></li>
+                    <li><a href="https://twitter.com/CyclingLover3" class=""Twitter>Twitter</a></li>
                 </ul>
             </nav>
         </section>
