modified readme file and CSS

--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
             <li><a href="#About-Me">About Me</a></li>
             <li><a href="#Work">Work</a></li>
             <li><a href="#Contact-Me">Contact ME</a></li>
-            <li><a href="">Resume</a></li>
+            <li><a href="./assets/img/HiroakiAraiResume.pdf">Resume</a></li>
         </ul>
         </nav>
     </header>
     
     <!-- background-img -->
+    <img src="/assets/img/hiroaki_arai.jpg" alt="hiroaki_arai" class="hiro">
     <div class="cool-subtitle-here"></div>
 
     <main class="container">
 
         <section id="About-Me" class="About-Me">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum reiciendis cum pariatur magnam doloribus suscipit architecto eligendi. Animi harum minima, distinctio voluptatibus perferendis deserunt magni temporibus enim vitae. Nam, vitae. 
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic id nihil esse omnis odio explicabo laudantium officiis laboriosam velit repellat consequatur repellendus enim culpa laborum dignissimos ab, harum quae temporibus?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis molestiae, adipisci vero praesentium placeat magni dolor. Nihil eaque iste nostrum quidem dolor fugiat perspiciatis ipsum! Quidem, at saepe! Aperiam, quas.
+            <p>Currently studying full stack development in part-time bootcamp course. Open to any position for full-stack, front-end or back-end engineer. Extensive customer service experience, strong team-player, quick learner, hardworking and goal oriented with strong ability to work
+                peacefully and efficiently under pressure.
             </p>
 
         </section>
-
+        
         <section id="Work" class="Work">
             <h2>Work</h2>
             <div class="link-container">
-                <a href="" class="Surf-Report"></a>
-                <a href="" class="LED-WALL"></a>
-                <a href="Calculator" class="Calculator"></a>
-                <a href="Pastel-Puzzle" class="Pastel-Puzzle"></a>
-                <a href="Run-Buddy" class="Run-Buddy"></a>
+                <a href="https://github.com/Hiroro1989" class="Surf-Report"></a>
+                <a href="https://github.com/Hiroro1989" class="LED-WALL"></a>
+                <a href="https://github.com/Hiroro1989" class="Calculator"></a>
+                <a href="https://github.com/Hiroro1989" class="Pastel-Puzzle"></a>
+                <a href="https://github.com/Hiroro1989/accesiblity-standard-html-css" class="Run-Buddy"></a>
             </div>
         </section>
 
