--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     
     <!-- background-img -->
-    <img src="./assets/img/hiroaki_arai.jpg" alt="hiroaki_arai" class="hiro">
+    <img src="./assets/img/hiroakiArai.jpg" alt="hiroaki_arai" class="hiro">
     <div class="cool-subtitle-here"></div>
 
     <main class="container">
